# context-forge

./: .env.example  .gitignore  AGENTS.md  README.md  context-forge.yml.example  docker-compose.override.yml.example  docker-compose.yml  setup.ps1  setup.sh
docs/: claude-code.md  codex.md  cursor.md
services/server/: Dockerfile  pyproject.toml
services/server/src/: config.py  db.py  main.py  runtime_state.py  scheduler.py
services/server/src/api/: app.py  security.py
services/server/src/api/routes/: auth.py  github.py  gitlab.py  jobs.py  memory.py  repos.py  settings.py  setup.py
services/server/src/indexer/: embedder.py  git_manager.py  indexer.py
services/server/src/mcp/: jobs.py  memory.py  repos.py  server.py
services/ui/: Dockerfile  index.html  nginx.conf  package-lock.json  package.json
services/ui/src/: App.tsx  index.css
services/ui/src/lib/: api.ts
services/ui/src/pages/: Dashboard.tsx  Jobs.tsx  Login.tsx  Memory.tsx  RepoDetail.tsx  Repos.tsx  Search.tsx  Settings.tsx  Setup.tsx  Tools.tsx
templates/: AGENTS.md  CLAUDE.md
