[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "context-forge-server"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    # MCP server
    "fastmcp>=2.0.0",

    # REST API
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.30.0",

    # Database
    "asyncpg>=0.29.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "sqlalchemy[asyncio]>=2.0.0",

    # Memory
    "mem0ai>=0.1.0",

    # Embeddings
    "openai>=1.50.0",
    "sentence-transformers>=3.0.0",

    # Indexing / code parsing
    "tree-sitter>=0.23.0",
    "tree-sitter-python>=0.23.0",
    "tree-sitter-javascript>=0.23.0",
    "tree-sitter-typescript>=0.23.0",
    "tree-sitter-go>=0.23.0",
    "tree-sitter-java>=0.23.0",

    # Git
    "gitpython>=3.1.40",

    # Scheduling
    "apscheduler>=3.10.4",

    # Config
    "pyyaml>=6.0",
    "python-dotenv>=1.0.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",

    # Utils
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "aiofiles>=24.0.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["src*"]
